001-springboot-demo-helloworld/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld-container
          image: huangmo2017/001-springboot-demo-helloworld:20 # 替换为你的镜像名和标签
          ports:
            - containerPort: 8080
