001-springboot-demo-helloworld/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  type: NodePort
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8091
